# tableau-cli

./: .gitignore  README.md  pyproject.toml  requirements.txt
tabcli/: __init__.py  __main__.py  cli.py  config.py  errors.py  output.py  resolve.py  session.py
tabcli/commands/: __init__.py  auth.py  datasource.py  group.py  job.py  ls.py  project.py  view.py  workbook.py
